--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
   },
   "private": true,
   "dependencies": {
-    "express": "4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "4.17.1",
+    "pg": "^8.3.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.3"
   },
   "devDependencies": {
     "@nrwl/express": "^9.5.1",
