--- a/nx.json
+++ b/nx.json
@@ -27,6 +27,12 @@
     },
     "user-utilities-sql-models": {
       "tags": []
+    },
+    "database": {
+      "tags": []
+    },
+    "classes": {
+      "tags": []
     }
   }
 }
